--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,29 @@
   <title>Contact - Lohi Wean</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <style>
-    html {
-        font-size: 18px; /* Base font size for consistent scaling */
+    /* Ensure all containers scale proportionally */
+    body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        box-sizing: border-box;
     }
+
+    html {
+        font-size: clamp(12px, 1vw, 18px); /* Adjust font size based on viewport width */
+    }
+
+    /* Make images responsive */
+    img {
+        max-width: 100%;
+        height: auto;
+    }
+
     html, body {
       margin: 0;
       padding: 0;
@@ -46,6 +66,7 @@
   }
     form {
       max-width: 2000px;
+      min-width: 2000px;
       margin: auto;
       display: flex;
       flex-direction: column;
@@ -88,6 +109,14 @@
       font-size: 1rem; /* Reverted font size for social links */
     }
 
+    /* Responsive containers */
+    .ascii-title, form, .social-links-container {
+        max-width: 90%;
+        margin: 0, auto;
+        padding: 1rem;
+        box-sizing: border-box;
+    }
+
     .social-links-container {
         display: flex;
         justify-content: center;
@@ -105,6 +134,57 @@
         cursor: pointer; /* Indicate interactivity */
 
       }
+
+    /* Adjust layout for smaller screens */
+    @media (max-width: 768px) {
+        html {
+            font-size: clamp(10px, 2vw, 16px); /* Increase font size for smaller screens */
+        }
+
+        nav a {
+            font-size: 1.5rem; /* Adjust navigation link size */
+        }
+
+        .ascii-title {
+            font-size: 1.5rem; /* Adjust ASCII title size */
+        }
+
+        button {
+            font-size: 1.2rem; /* Adjust button size */
+        }
+    }
+
+    @media (max-width: 480px) {
+        html {
+            font-size: clamp(8px, 3vw, 14px); /* Further increase font size for very small screens */
+        }
+
+        .ascii-title {
+            font-size: 1.2rem; /* Further adjust ASCII title size */
+        }
+
+        button {
+            font-size: 1rem; /* Further adjust button size */
+        }
+    }
+
+    /* Adjust ASCII title for smaller screens */
+    @media (max-width: 480px) {
+        .ascii-title {
+            font-size: 1rem; /* Reduce font size for better fit */
+            line-height: 1.2; /* Adjust line spacing to prevent overlap */
+            word-break: break-word; /* Ensure long lines break properly */
+        }
+    }
+
+    /* Adjust ASCII title for widths below 2240px */
+    @media (max-width: 2240px) {
+        .ascii-title {
+            font-size: 2rem; /* Reduce font size to prevent squishing */
+            line-height: 1.5; /* Increase line spacing for better readability */
+            word-break: break-word; /* Ensure long lines break properly */
+        }
+    }
   </style>
 </head>
 <body>
