--- a/contact.html
+++ b/contact.html
@@ -185,6 +185,52 @@
             word-break: break-word; /* Ensure long lines break properly */
         }
     }
+
+    /* Adjust layout for iPad Pro 11-inch (2048px width) */
+    @media (max-width: 2048px) {
+        .ascii-title {
+            font-size: clamp(1.5rem, 2vw, 2.5rem); /* Scale font size dynamically */
+            line-height: 1.4; /* Adjust line spacing */
+        }
+
+        form {
+            max-width: 90%; /* Ensure form fits within the viewport */
+        }
+
+        input, textarea {
+            font-size: clamp(1rem, 1.5vw, 1.5rem); /* Scale input font size */
+        }
+
+        button {
+            font-size: clamp(1rem, 1.5vw, 1.5rem); /* Scale button font size */
+        }
+    }
+
+    /* Adjust layout for iPhone 13 (1170px width) */
+    @media (max-width: 1170px) {
+        .ascii-title {
+            font-size: clamp(1rem, 2vw, 2rem); /* Scale font size dynamically */
+            line-height: 1.3; /* Adjust line spacing */
+        }
+
+        form {
+            max-width: 95%; /* Ensure form fits within the viewport */
+        }
+
+        input, textarea {
+            font-size: clamp(0.8rem, 1.5vw, 1.2rem); /* Scale input font size */
+        }
+
+        button {
+            font-size: clamp(0.8rem, 1.5vw, 1.2rem); /* Scale button font size */
+        }
+    }
+
+    /* General scaling for all devices */
+    body {
+        max-width: 100vw; /* Prevent horizontal overflow */
+        overflow-x: hidden; /* Hide horizontal scroll */
+    }
   </style>
 </head>
 <body>
