--- a/contact.html
+++ b/contact.html
@@ -42,13 +42,32 @@
     }
     nav {
       position: fixed;
-      top: 1rem;
-      right: 2rem;
+      top: 1rem; /* Adjusted to center closer to the top */
+      left: 50%; /* Center horizontally */
+      transform: translateX(-50%); /* Adjust for centering */
+      display: flex;
+      gap: 1rem; /* Consistent spacing between buttons */
       font-size: 4rem;
     }
     nav a {
-        font-size: 4rem; /* Adjusted font size for menu links */
+        margin: 0; /* Remove extra margins */
+        text-decoration: none;
+        color: #e6ff8c;
+        margin-left: 1rem; /* Set a smaller default margin */
     }
+
+    @media (max-width: 768px) {
+        nav a {
+            margin-left: 0.5rem; /* Reduce margin for smaller screens */
+        }
+    }
+
+    @media (max-width: 480px) {
+        nav a {
+            margin-left: 0.25rem; /* Further reduce margin for very small screens */
+        }
+    }
+
     .ascii-title {
       white-space: pre-wrap;
       font-size: 3rem; /* Increased font size for main ASCII title */
@@ -65,8 +84,8 @@
     margin-top: .5rem;
   }
     form {
-      max-width: 2000px;
-      min-width: 1000px;
+      min-width: 30rem;
+      max width: 200rem;
       margin: auto;
       display: flex;
       flex-direction: column;
@@ -142,7 +161,7 @@
         }
 
         nav a {
-            font-size: 2.5rem; /* Adjust navigation link size */
+            font-size: 4rem; /* Adjust navigation link size */
         }
 
         .ascii-title {
@@ -209,7 +228,7 @@
     /* Adjust layout for iPhone 13 (1170px width) */
     @media (max-width: 1170px) {
         .ascii-title {
-            font-size: clamp(1rem, 2vw, 2rem); /* Scale font size dynamically */
+            font-size: clamp(.5rem, 2vw, 2rem); /* Scale font size dynamically */
             line-height: 1.3; /* Adjust line spacing */
         }
 
@@ -229,7 +248,7 @@
     /* Adjust navigation menu and subtitle for smaller screens */
     @media (max-width: 1170px) {
         nav a {
-            font-size: clamp(1.5rem, 2vw, 2.5rem); /* Scale down navigation link size */
+            font-size: clamp(1.5rem, 2.5vw, 4rem); /* Scale down navigation link size */
         }
 
         .subtitle {
@@ -267,10 +286,10 @@
   </style>
 </head>
 <body>
-  <nav style="position: fixed; top: 5rem; right: 10rem; font-size: 1rem;">
-    <a href="about.html" style="margin-left: 3rem; color: #e6ff8c; text-decoration: none;">About</a>
-    <a href="index.html" style="margin-left: 3rem; color: #e6ff8c; text-decoration: none;">Works</a>
-    <a href="contact.html" style="margin-left: 3rem; color: #e6ff8c; text-decoration: none;">Contact</a>
+  <nav style="position: fixed; top: 5rem; right: 10rem; font-size: 4rem;">
+    <a href="about.html" style="color: #e6ff8c; text-decoration: none;">About</a>
+    <a href="index.html" style="color: #e6ff8c; text-decoration: none;">Works</a>
+    <a href="contact.html" style="color: #e6ff8c; text-decoration: none;">Contact</a>
   </nav>
 
   
