nav menu better finally?

--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,8 @@
         }
 
         nav a {
-            margin-left: 0.5rem; /* Reduce margin for smaller screens */
+            margin-left: 0.5rem;
+            margin-top: 0.2rem; /* Reduce margin for smaller screens */
         }
     }
 
@@ -304,7 +305,7 @@
   </style>
 </head>
 <body>
-  <nav style="position: fixed; top: 5rem; right: 10rem; font-size: 4rem;">
+  <nav>
     <a href="about.html" style="color: #e6ff8c; text-decoration: none;">About</a>
     <a href="index.html" style="color: #e6ff8c; text-decoration: none;">Works</a>
     <a href="contact.html" style="color: #e6ff8c; text-decoration: none;">Contact</a>
@@ -342,7 +343,7 @@ U /"___|   \/"_ \/ | \ |"|   |_ " _|U  /"\  uU /"___||_ " _|
     <br/><br/>Thank you!
   </div>
 
-  <div class="social-links-container" style="margin-top: 10rem; display: flex; justify-content: center; gap: 1rem;">
+  <div class="social-links-container" style="margin-top: 3rem; display: flex; justify-content: center; gap: 1rem;">
   <a href="http://instagram.com/keal0hi/" target="_blank" style="color: #e6ff8c; text-decoration: none;">
     <img src="instagram.png" alt="Instagram" />
   </a>
