Implement responsive flipbook scaling and standardize navigation across all pages
- Fixed tattoo-flash.html flipbook responsiveness using viewport-based scaling
- Standardized navigation styling across all pages (index, tattoo-flash, works-in-progress, works-on-skin)
- Updated font scaling to use clamp() for consistent responsive behavior
- Improved mobile navigation with proper breakpoints
- Enhanced ASCII title scaling for all screen sizes
- Optimized Three.js renderer pixel ratio for better mobile performance
- Cleaned up conflicting CSS and removed unused scripts

--- a/index.html
+++ b/index.html
@@ -49,21 +49,30 @@
     }
 
     @media (max-width: 768px) {
+        html {
+            font-size: clamp(10px, 2vw, 16px); /* Smaller base font for mobile */
+        }
+        
         nav {
             font-size: 3rem; /* Scale down font size for tablets */
             gap: 1.5rem; /* Adjust spacing for smaller screens */
         }
 
         nav a {
+            font-size: 4rem; /* Specific nav override to match contact.html */
             margin-left: 0.5rem;
             margin-top: 0.2rem; /* Reduce margin for smaller screens */
         }
     }
 
     @media (max-width: 480px) {
+        html {
+            font-size: clamp(8px, 3vw, 14px); /* Even smaller base font for mobile */
+        }
+        
         nav {
             font-size: 2.5rem; /* Scale down font size for mobile */
-            gap: .5rem; /* Adjust spacing for mobile */
+            gap: 1rem; /* Increased from .5rem to match contact.html spacing */
         }
 
         nav a {
@@ -483,6 +492,8 @@
     <a href="contact.html" style="color: #e6ff8c; text-decoration: none;">Contact</a>
   </nav>
 <pre class="ascii-title">
+  <br>
+ <br>
       ***** *    **   ***                             *                
   ******  *  *****    ***                          **                 
  **   *  *     *****   ***                         **                 
