Fix HTML closing tag typo in tattoo-flash.html

--- a/tattoo-flash.html
+++ b/tattoo-flash.html
@@ -394,4 +394,4 @@ dMP     dMMMMMP dMP dMP  VMMMP" dMP dMP        dMMMMP"  VMMMP"  VMMMP" dMP dMP
         });
     </script>
 </body>
-</htmtl>
+</html>
