Apply simple container-based positioning to navigation arrows

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
       text-align: center;
     }
     nav {
-      position: fixed;
+      position: absolute;
       top: 1rem; /* Consistent top margin */
       right: 2rem; /* Position on the top-right corner */
       display: flex;
