--- a/works-on-skin.html
+++ b/works-on-skin.html
@@ -23,7 +23,7 @@
     
     /* Nav menu styling - exact copy from index.html for consistency */
     nav {
-      position: fixed;
+      position: absolute;
       top: 1rem; /* Consistent top margin */
       right: 2rem; /* Position on the top-right corner */
       display: flex;
