--- a/tattoo-flash.html
+++ b/tattoo-flash.html
@@ -172,6 +172,22 @@
     translate: -100% 0;
     rotate: 0 1 0 180deg;
 }
+
+    /* Flipbook caption styles */
+    .flipbook-caption {
+        width: 100%;
+        margin: 2rem auto 0 auto;
+        text-align: center;
+        color: #e6ff8c;
+        font-size: clamp(.2rem, 6vw, 1rem);
+        font-family: inherit;
+        line-height: 1.3;
+        max-width: 80ch;
+        background: none;
+        padding: 0.5em 0;
+        box-sizing: border-box;
+        z-index: 2;
+    }
   </style>
 </head>
 <body>
@@ -317,7 +333,9 @@ dMP     dMMMMMP dMP dMP  VMMMP" dMP dMP        dMMMMP"  VMMMP"  VMMMP" dMP dMP
             
             </div>
         </div>
-      </div>
+    </div>
+    <div class="flipbook-caption">  
+. ݁₊ ⊹ . ݁ ⟡ ݁ . ⊹ ₊ ݁.Flip me˚₊ · »-♡→ </div>
 </div>
     </div>
   <script src="randomImage.js"></script>
