Tweak bits.html container height and scroll cutoff for cleaner page end

--- a/works-in-progress.html
+++ b/works-in-progress.html
@@ -313,7 +313,7 @@ z-index: 10;
     const carouselImg = document.getElementById('carousel-img');
     const images = {
       boobs: [
-        'process 1.webp', 'process 2.webp', 'process 3.webp', 'process 4.webp', 'process 5.webp', 'process 6.webp', 'process 7.webp'
+        'wip1.webp', 'wip2.webp', 'process 1.webp', 'process 2.webp', 'process 3.webp', 'process 4.webp', 'process 5.webp', 'process 6.webp', 'process 7.webp'
       ],
       killdozer: [
         'Killdozer Progress 1.webp', 'Killdozer Progress 2.webp', 'Killdozer Progress 3.webp', 'Killdozer Progress 4.webp', 'Killdozer Progress 5.webp', 'Killdozer Progress 6.webp'
