--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         width: 100%;
         height: 100%;
         box-sizing: border-box;
+        max-height: 100vh;
+        margin-bottom: 32px; /* Small margin after content */
+        overflow-y: auto;
     }
 
     nav {
