--- a/contact.html
+++ b/contact.html
@@ -41,12 +41,13 @@
       text-align: center;
     }
     nav {
-      position: absolute;
-      top: 1rem; /* Consistent top margin */
-      right: 2rem; /* Position on the top-right corner */
-      display: flex;
-      gap: 2rem; /* Add spacing between menu items */
-      font-size: 4rem; /* Default font size for desktop */
+  position: fixed;
+  top: 1rem;
+  right: 2rem;
+  display: flex;
+  gap: 2rem;
+  font-size: 4rem;
+  z-index: 1000;
     }
     nav a {
         margin: 0; /* Remove extra margins */
