--- a/index.html
+++ b/index.html
@@ -31,19 +31,17 @@
         width: 100%;
         height: 100%;
         box-sizing: border-box;
-        max-height: 100vh;
-        margin-bottom: 32px; /* Small margin after content */
-        overflow-y: auto;
     }
 
-    nav {
-      position: absolute;
-      top: 1rem; /* Consistent top margin */
-      right: 2rem; /* Position on the top-right corner */
-      display: flex;
-      gap: 2rem; /* Add spacing between menu items */
-      font-size: 4rem; /* Default font size for desktop */
-    }
+        nav {
+            position: fixed;
+            top: 1rem;
+            right: 2rem;
+            display: flex;
+            gap: 2rem;
+            font-size: 4rem;
+            z-index: 1000;
+        }
     nav a {
         margin: 0; /* Remove extra margins */
         text-decoration: none;
@@ -464,7 +462,29 @@
     #next {
       right: 50px; /* Moved closer to center from 10px */
     }
-  </style>
+
+    /* Responsive scaling for random images */
+    .filtered-image {
+        max-width: 10vw;
+        height: auto;
+        margin: 0 1vw;
+        transition: max-width 0.2s;
+    }
+    @media (max-width: 768px) {
+        .filtered-image {
+            max-width: 30vw;
+            min-width: 80px;
+        }
+    }
+    @media (max-width: 480px) {
+        .filtered-image {
+            max-width: 45vw;
+            min-width: 90px;
+        }
+    }
+  
+    /* End random image scaling */
+    </style>
 
 <!-- Add randomImage.js script -->
 <script src="randomImage.js"></script>
@@ -478,22 +498,16 @@
 <pre class="ascii-title">
   <br>
  <br>
-      ***** *    **   ***                             *                
-  ******  *  *****    ***                          **                 
- **   *  *     *****   ***                         **                 
-*    *  **     * **      **                        **                 
-    *  ***     *         **    ****   ***  ****    **         ****    
-   **   **     *         **   * ***  * **** **** * **  ***   * **** * 
-   **   **     *         **  *   ****   **   ****  ** * *** **  ****  
-   **   **     *         ** **    **    **         ***   * ****       
-   **   **     *         ** **    **    **         **   *    ***      
-   **   **     *         ** **    **    **         **  *       ***    
-    **  **     *         ** **    **    **         ** **         ***  
-     ** *      *         *  **    **    **         ******   ****  **  
-      ***      ***      *    ******     ***        **  *** * **** *   
-       ******** ********      ****       ***       **   *** * ****    
-         ****     ****                              **   ***          
-                                                                 
+
+ ▄█     █▄   ▄██████▄     ▄████████    ▄█   ▄█▄    ▄████████ 
+███     ███ ███    ███   ███    ███   ███ ▄███▀   ███    ███ 
+███     ███ ███    ███   ███    ███   ███▐██▀     ███    █▀  
+███     ███ ███    ███  ▄███▄▄▄▄██▀  ▄█████▀      ███        
+███     ███ ███    ███ ▀▀███▀▀▀▀▀   ▀▀█████▄    ▀███████████ 
+███     ███ ███    ███ ▀███████████   ███▐██▄            ███ 
+███ ▄█▄ ███ ███    ███   ███    ███   ███ ▀███▄    ▄█    ███ 
+ ▀███▀███▀   ▀██████▀    ███    ███   ███   ▀█▀  ▄████████▀  
+                         ███    ███   ▀                      
  </pre>
 <div class="gallery-container">
 <div class="gallery">
