--- a/index.html
+++ b/index.html
@@ -27,14 +27,15 @@
         margin: 0;
         padding: 0;
         width: 100%;
-        height: 100%;
-        box-sizing: border-box;
+/* Place desktop overrides at the very end to ensure they take precedence */
+@media (min-width: 1201px) {
+    .ascii-title {
+        font-size: 1.2rem;
     }
-
-        nav {
-            position: fixed;
-            top: 1rem;
-            right: 2rem;
+    nav {
+        font-size: 2.5rem !important;
+    }
+}
             display: flex;
             gap: 2rem;
             font-size: 4rem;
@@ -158,6 +159,7 @@
     @media (max-width: 1200px) {
         .gallery-container {
             transform: scale(0.23);
+            
         @media (max-width: 480px) {
             html {
                 font-size: clamp(8px, 3vw, 14px); /* Even smaller base font for mobile */
