--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 <title>Works</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <style>
-
+    html {
+      font-size: clamp(12px, 1vw, 18px); /* Adjust font size based on viewport width */
+    }
 
     html, body {
       margin: 0;
@@ -27,59 +29,58 @@
         margin: 0;
         padding: 0;
         width: 100%;
-/* Place desktop overrides at the very end to ensure they take precedence */
-@media (min-width: 1201px) {
-    .ascii-title {
-        font-size: 1rem;
+        height: 100%;
+        box-sizing: border-box;
     }
-    nav {
-        font-size: 1.5rem !important;
-    }
-}
+
+        nav {
+            position: fixed;
+            top: 1rem;
+            right: 2rem;
             display: flex;
             gap: 2rem;
             font-size: 4rem;
             z-index: 1000;
         }
     nav a {
-                html, body {
-                    margin: 0;
-                    padding: 0;
-                    width: 100%;
-                    overflow-x: hidden; /* Prevent horizontal scrolling */
-                }
-            }
-                body {
-                    background-color: #1b1b1b; /* Unified background color across all pages */
-                    color: #d9d9c2;
-                    font-family: monospace;
-                    text-align: center;
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    justify-content: center;
-                    margin: 0;
-                    padding: 0;
-                    width: 100%;
-                    height: 100%;
-                    box-sizing: border-box;
-                }
+        margin: 0; /* Remove extra margins */
+        text-decoration: none;
+        color: #e6ff8c;
+        margin-left: 1rem; /* Set a smaller default margin */
+    }
 
-                nav {
-                    position: fixed;
-                    top: 1rem;
-                    right: 2rem;
-                    display: flex;
-                    gap: 2rem;
-                    font-size: 4rem;
-                    z-index: 1000;
-                }
-                nav a {
-                    margin: 0; /* Remove extra margins */
-                    text-decoration: none;
-                    color: #e6ff8c;
-                    margin-left: 1rem; /* Set a smaller default margin */
-                }
+    @media (max-width: 768px) {
+        html {
+            font-size: clamp(10px, 2vw, 16px); /* Smaller base font for mobile */
+        }
+        
+        nav {
+            font-size: 3rem; /* Scale down font size for tablets */
+            gap: 1.5rem; /* Adjust spacing for smaller screens */
+        }
+
+        nav a {
+            font-size: 4rem; /* Specific nav override to match contact.html */
+            margin-left: 0.5rem;
+            margin-top: 0.2rem; /* Reduce margin for smaller screens */
+        }
+    }
+
+    @media (max-width: 480px) {
+        html {
+            font-size: clamp(8px, 3vw, 14px); /* Even smaller base font for mobile */
+        }
+        
+        nav {
+            font-size: 2.5rem; /* Scale down font size for mobile */
+            gap: 1rem; /* Increased from .5rem to match contact.html spacing */
+        }
+
+        nav a {
+            margin-left: 0.25rem; /* Further reduce margin for very small screens */
+        }
+    }
+
     .ascii-title {
       text-align: center;
       color: #aaffcc;
@@ -159,19 +160,6 @@
     @media (max-width: 1200px) {
         .gallery-container {
             transform: scale(0.23);
-
-        @media (max-width: 480px) {
-            html {
-                font-size: clamp(8px, 3vw, 14px); /* Even smaller base font for mobile */
-            }
-            nav {
-                font-size: 2.5rem; /* Scale down font size for mobile */
-                gap: 1rem; /* Increased from .5rem to match contact.html spacing */
-            }
-            nav a {
-                margin-left: 0.25rem; /* Further reduce margin for very small screens */
-            }
-        }
             padding: 2rem 1rem;
             max-width: 3200px; /* Reduce container width so scaled content fits */
             margin: 0 auto; /* Center the container */
